# edu-data-modeler

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
sql/: data_verification.sql  tables.sql
src/: models.py  simulate_data.py
